deploy: 93100726ceff9d357b17dc17d211a85cf832e9b7

--- a/zh/user-guide/install/index.html
+++ b/zh/user-guide/install/index.html
@@ -7,17 +7,17 @@
 <meta name=author content="Shiming Zhang">
 <link rel=icon href=/images/favicon.png type=image/png>
 <title>安装 : ktls.io</title>
-<link href=/css/nucleus.css?1629273423 rel=stylesheet>
-<link href=/css/fontawesome-all.min.css?1629273423 rel=stylesheet>
-<link href=/css/hybrid.css?1629273423 rel=stylesheet>
-<link href=/css/featherlight.min.css?1629273423 rel=stylesheet>
-<link href=/css/perfect-scrollbar.min.css?1629273423 rel=stylesheet>
-<link href=/css/auto-complete.css?1629273423 rel=stylesheet>
-<link href=/css/atom-one-dark-reasonable.css?1629273423 rel=stylesheet>
-<link href=/css/theme.css?1629273423 rel=stylesheet>
-<link href=/css/tabs.css?1629273423 rel=stylesheet>
-<link href=/css/hugo-theme.css?1629273423 rel=stylesheet>
-<script src=/js/jquery-3.3.1.min.js?1629273423></script>
+<link href=/css/nucleus.css?1629274030 rel=stylesheet>
+<link href=/css/fontawesome-all.min.css?1629274030 rel=stylesheet>
+<link href=/css/hybrid.css?1629274030 rel=stylesheet>
+<link href=/css/featherlight.min.css?1629274030 rel=stylesheet>
+<link href=/css/perfect-scrollbar.min.css?1629274030 rel=stylesheet>
+<link href=/css/auto-complete.css?1629274030 rel=stylesheet>
+<link href=/css/atom-one-dark-reasonable.css?1629274030 rel=stylesheet>
+<link href=/css/theme.css?1629274030 rel=stylesheet>
+<link href=/css/tabs.css?1629274030 rel=stylesheet>
+<link href=/css/hugo-theme.css?1629274030 rel=stylesheet>
+<script src=/js/jquery-3.3.1.min.js?1629274030></script>
 <style>:root #header+#content>#left>#rlblock_left{display:none!important}</style>
 </head>
 <body data-url=/zh/user-guide/install/>
@@ -33,10 +33,10 @@
 <input data-search-input id=search-by type=search placeholder=Search...>
 <span data-search-clear><i class="fas fa-times"></i></span>
 </div>
-<script type=text/javascript src=/js/lunr.min.js?1629273423></script>
-<script type=text/javascript src=/js/auto-complete.js?1629273423></script>
+<script type=text/javascript src=/js/lunr.min.js?1629274030></script>
+<script type=text/javascript src=/js/auto-complete.js?1629274030></script>
 <script type=text/javascript>var baseurl="//zh"</script>
-<script type=text/javascript src=/js/search.js?1629273423></script>
+<script type=text/javascript src=/js/search.js?1629274030></script>
 </div>
 <div class=highlightable>
 <ul class=topics>
@@ -86,13 +86,10 @@ TODO
 <h3>More</h3>
 <ul>
 <li>
-<a class=padding href=zh/><i class="fas fa-fw fa-home"></i> KLTS</a>
-</li>
-<li>
 <a class=padding href=https://github.com/klts-io><i class="fab fa-fw fa-github"></i> GitHub 仓库</a>
 </li>
 <li>
-<a class=padding href=zh/contributors><i class="fas fa-fw fa-bullhorn"></i> 鸣谢</a>
+<a class=padding href=/zh/contributors><i class="fas fa-fw fa-bullhorn"></i> 鸣谢</a>
 </li>
 </ul>
 </section>
@@ -280,17 +277,17 @@ kubeadm init --image-repository <span style=color:#e6db74>${</span>REPOS<span st
 <div style=left:-1000px;overflow:scroll;position:absolute;top:-1000px;border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px>
 <div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div>
 </div>
-<script src=/js/clipboard.min.js?1629273423></script>
-<script src=/js/perfect-scrollbar.min.js?1629273423></script>
-<script src=/js/perfect-scrollbar.jquery.min.js?1629273423></script>
-<script src=/js/jquery.sticky.js?1629273423></script>
-<script src=/js/featherlight.min.js?1629273423></script>
-<script src=/js/highlight.pack.js?1629273423></script>
+<script src=/js/clipboard.min.js?1629274030></script>
+<script src=/js/perfect-scrollbar.min.js?1629274030></script>
+<script src=/js/perfect-scrollbar.jquery.min.js?1629274030></script>
+<script src=/js/jquery.sticky.js?1629274030></script>
+<script src=/js/featherlight.min.js?1629274030></script>
+<script src=/js/highlight.pack.js?1629274030></script>
 <script>hljs.initHighlightingOnLoad()</script>
-<script src=/js/modernizr.custom-3.6.0.js?1629273423></script>
-<script src=/js/learn.js?1629273423></script>
-<script src=/js/hugo-learn.js?1629273423></script>
-<script src=/mermaid/mermaid.js?1629273423></script>
+<script src=/js/modernizr.custom-3.6.0.js?1629274030></script>
+<script src=/js/learn.js?1629274030></script>
+<script src=/js/hugo-learn.js?1629274030></script>
+<script src=/mermaid/mermaid.js?1629274030></script>
 <script>mermaid.initialize({startOnLoad:!0})</script>
 </body>
 </html>
