deploy: b25d5f71e4b6beeb52a3c4cd48ffabc9d1e41c24

--- a/en/index.html
+++ b/en/index.html
@@ -6,18 +6,18 @@
 <meta name=description content="Website for KLTS">
 <meta name=author content="Shiming Zhang">
 <link rel=icon href=/images/favicon.png type=image/png>
-<title>ktls.io : ktls.io</title>
-<link href=/css/nucleus.css?1629275506 rel=stylesheet>
-<link href=/css/fontawesome-all.min.css?1629275506 rel=stylesheet>
-<link href=/css/hybrid.css?1629275506 rel=stylesheet>
-<link href=/css/featherlight.min.css?1629275506 rel=stylesheet>
-<link href=/css/perfect-scrollbar.min.css?1629275506 rel=stylesheet>
-<link href=/css/auto-complete.css?1629275506 rel=stylesheet>
-<link href=/css/atom-one-dark-reasonable.css?1629275506 rel=stylesheet>
-<link href=/css/theme.css?1629275506 rel=stylesheet>
-<link href=/css/tabs.css?1629275506 rel=stylesheet>
-<link href=/css/hugo-theme.css?1629275506 rel=stylesheet>
-<script src=/js/jquery-3.3.1.min.js?1629275506></script>
+<title>KLTS : ktls.io</title>
+<link href=/css/nucleus.css?1629275920 rel=stylesheet>
+<link href=/css/fontawesome-all.min.css?1629275920 rel=stylesheet>
+<link href=/css/hybrid.css?1629275920 rel=stylesheet>
+<link href=/css/featherlight.min.css?1629275920 rel=stylesheet>
+<link href=/css/perfect-scrollbar.min.css?1629275920 rel=stylesheet>
+<link href=/css/auto-complete.css?1629275920 rel=stylesheet>
+<link href=/css/atom-one-dark-reasonable.css?1629275920 rel=stylesheet>
+<link href=/css/theme.css?1629275920 rel=stylesheet>
+<link href=/css/tabs.css?1629275920 rel=stylesheet>
+<link href=/css/hugo-theme.css?1629275920 rel=stylesheet>
+<script src=/js/jquery-3.3.1.min.js?1629275920></script>
 <style>:root #header+#content>#left>#rlblock_left{display:none!important}</style>
 </head>
 <body data-url=/en/>
@@ -33,13 +33,53 @@
 <input data-search-input id=search-by type=search placeholder=Search...>
 <span data-search-clear><i class="fas fa-times"></i></span>
 </div>
-<script type=text/javascript src=/js/lunr.min.js?1629275506></script>
-<script type=text/javascript src=/js/auto-complete.js?1629275506></script>
+<script type=text/javascript src=/js/lunr.min.js?1629275920></script>
+<script type=text/javascript src=/js/auto-complete.js?1629275920></script>
 <script type=text/javascript>var baseurl="//en"</script>
-<script type=text/javascript src=/js/search.js?1629275506></script>
+<script type=text/javascript src=/js/search.js?1629275920></script>
 </div>
 <div class=highlightable>
 <ul class=topics>
+<li data-nav-id=/en/user-guide/ title="User guide" class=dd-item>
+<a href=/en/user-guide/>
+User guide
+<i class="fas fa-check read-icon"></i>
+</a>
+<ul>
+<li data-nav-id=/en/user-guide/pre-install/ title="Pre install" class=dd-item>
+<a href=/en/user-guide/pre-install/>
+Pre install
+<i class="fas fa-check read-icon"></i>
+</a>
+</li>
+<li data-nav-id=/en/user-guide/install/ title=Install class=dd-item>
+<a href=/en/user-guide/install/>
+Install
+<i class="fas fa-check read-icon"></i>
+</a>
+</li>
+<li data-nav-id=/en/user-guide/post-install/ title="Post install" class=dd-item>
+<a href=/en/user-guide/post-install/>
+Post install
+<i class="fas fa-check read-icon"></i>
+</a>
+</li>
+</ul>
+</li>
+<li data-nav-id=/en/developer-guide/ title="Developer guide" class=dd-item>
+<a href=/en/developer-guide/>
+Developer guide
+<i class="fas fa-check read-icon"></i>
+</a>
+<ul>
+<li data-nav-id=/en/developer-guide/todo/ title=TODO class=dd-item>
+<a href=/en/developer-guide/todo/>
+TODO
+<i class="fas fa-check read-icon"></i>
+</a>
+</li>
+</ul>
+</li>
 </ul>
 <section id=shortcuts>
 <h3>More</h3>
@@ -85,34 +125,27 @@ from <a href=https://getgrav.org>Grav</a> and <a href=https://gohugo.io/>Hugo</a
 <span id=sidebar-toggle-span>
 <a href=# id=sidebar-toggle data-sidebar-toggle><i class="fas fa-bars"></i> navigation</a>
 </span>
-<h1>Customize your own home page</h1>
-<p>
-The site is working. Don't forget to customize this homepage with your own. You typically have 3 choices :
-</p>
-<ul>
-<li><b>1. </b> Create an _index.md document in <b>content</b> folder and fill it with Markdown content</li>
-<li><b>2. </b> Create an <b>index.html</b> file in the <b>static</b> folder and fill the file with HTML content</li>
-<li><b>3. </b> Configure your server to automatically redirect home page to one your documentation page</li>
-</ul>
+<p>TODO</p>
 </div>
 </div>
 <div id=navigation>
+<a class="nav nav-next" href=/en/user-guide/ title="User guide" style=margin-right:0><i class="fa fa-chevron-right"></i></a>
 </div>
 </section>
 <div style=left:-1000px;overflow:scroll;position:absolute;top:-1000px;border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px>
 <div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div>
 </div>
-<script src=/js/clipboard.min.js?1629275506></script>
-<script src=/js/perfect-scrollbar.min.js?1629275506></script>
-<script src=/js/perfect-scrollbar.jquery.min.js?1629275506></script>
-<script src=/js/jquery.sticky.js?1629275506></script>
-<script src=/js/featherlight.min.js?1629275506></script>
-<script src=/js/highlight.pack.js?1629275506></script>
+<script src=/js/clipboard.min.js?1629275920></script>
+<script src=/js/perfect-scrollbar.min.js?1629275920></script>
+<script src=/js/perfect-scrollbar.jquery.min.js?1629275920></script>
+<script src=/js/jquery.sticky.js?1629275920></script>
+<script src=/js/featherlight.min.js?1629275920></script>
+<script src=/js/highlight.pack.js?1629275920></script>
 <script>hljs.initHighlightingOnLoad()</script>
-<script src=/js/modernizr.custom-3.6.0.js?1629275506></script>
-<script src=/js/learn.js?1629275506></script>
-<script src=/js/hugo-learn.js?1629275506></script>
-<script src=/mermaid/mermaid.js?1629275506></script>
+<script src=/js/modernizr.custom-3.6.0.js?1629275920></script>
+<script src=/js/learn.js?1629275920></script>
+<script src=/js/hugo-learn.js?1629275920></script>
+<script src=/mermaid/mermaid.js?1629275920></script>
 <script>mermaid.initialize({startOnLoad:!0})</script>
 </body>
 </html>
