--- a/en/developer-guide/todo/index.html
+++ b/en/developer-guide/todo/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang=zh class="js csstransforms3d">
+<!doctype html><html lang=en class="js csstransforms3d">
 <head>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
@@ -6,7 +6,7 @@
 <meta name=description content="Website for KLTS">
 <meta name=author content="Shiming Zhang">
 <link rel=icon href=/images/favicon.png type=image/png>
-<title>终端用户指南 : ktls.io</title>
+<title>TODO : ktls.io</title>
 <link href=/css/nucleus.css?1629275920 rel=stylesheet>
 <link href=/css/fontawesome-all.min.css?1629275920 rel=stylesheet>
 <link href=/css/hybrid.css?1629275920 rel=stylesheet>
@@ -20,11 +20,11 @@
 <script src=/js/jquery-3.3.1.min.js?1629275920></script>
 <style>:root #header+#content>#left>#rlblock_left{display:none!important}</style>
 </head>
-<body data-url=/zh/user-guide/>
+<body data-url=/en/developer-guide/todo/>
 <nav id=sidebar class=showVisitedLinks>
 <div id=header-wrapper>
 <div id=header>
-<a id=logo href=/zh>
+<a id=logo href=/en>
 <b>KLTS.io<b>
 </a>
 </div>
@@ -35,47 +35,46 @@
 </div>
 <script type=text/javascript src=/js/lunr.min.js?1629275920></script>
 <script type=text/javascript src=/js/auto-complete.js?1629275920></script>
-<script type=text/javascript>var baseurl="//zh"</script>
+<script type=text/javascript>var baseurl="//en"</script>
 <script type=text/javascript src=/js/search.js?1629275920></script>
 </div>
 <div class=highlightable>
 <ul class=topics>
-<li data-nav-id=/zh/user-guide/ title=终端用户指南 class="dd-item
-parent
-active">
-<a href=/zh/user-guide/>
-终端用户指南
+<li data-nav-id=/en/user-guide/ title="User guide" class=dd-item>
+<a href=/en/user-guide/>
+User guide
 <i class="fas fa-check read-icon"></i>
 </a>
 <ul>
-<li data-nav-id=/zh/user-guide/pre-install/ title=安装预备 class=dd-item>
-<a href=/zh/user-guide/pre-install/>
-安装预备
+<li data-nav-id=/en/user-guide/pre-install/ title="Pre install" class=dd-item>
+<a href=/en/user-guide/pre-install/>
+Pre install
 <i class="fas fa-check read-icon"></i>
 </a>
 </li>
-<li data-nav-id=/zh/user-guide/install/ title=安装 class=dd-item>
-<a href=/zh/user-guide/install/>
-安装
+<li data-nav-id=/en/user-guide/install/ title=Install class=dd-item>
+<a href=/en/user-guide/install/>
+Install
 <i class="fas fa-check read-icon"></i>
 </a>
 </li>
-<li data-nav-id=/zh/user-guide/post-install/ title=安装后续 class=dd-item>
-<a href=/zh/user-guide/post-install/>
-安装后续
+<li data-nav-id=/en/user-guide/post-install/ title="Post install" class=dd-item>
+<a href=/en/user-guide/post-install/>
+Post install
 <i class="fas fa-check read-icon"></i>
 </a>
 </li>
 </ul>
 </li>
-<li data-nav-id=/zh/developer-guide/ title=开发者指南 class=dd-item>
-<a href=/zh/developer-guide/>
-开发者指南
+<li data-nav-id=/en/developer-guide/ title="Developer guide" class="dd-item
+parent">
+<a href=/en/developer-guide/>
+Developer guide
 <i class="fas fa-check read-icon"></i>
 </a>
 <ul>
-<li data-nav-id=/zh/developer-guide/todo/ title=TODO class=dd-item>
-<a href=/zh/developer-guide/todo/>
+<li data-nav-id=/en/developer-guide/todo/ title=TODO class="dd-item active">
+<a href=/en/developer-guide/todo/>
 TODO
 <i class="fas fa-check read-icon"></i>
 </a>
@@ -87,10 +86,10 @@ TODO
 <h3>More</h3>
 <ul>
 <li>
-<a class=padding href=https://github.com/klts-io/kubepatch><i class="fab fa-fw fa-github"></i> Kubepatch 仓库</a>
+<a class=padding href=https://github.com/klts-io/kubepatch><i class="fab fa-fw fa-github"></i> Kubepatch repo</a>
 </li>
 <li>
-<a class=padding href=/zh/contributors><i class="fas fa-fw fa-bullhorn"></i> 鸣谢</a>
+<a class=padding href=/en/contributors><i class="fas fa-fw fa-bullhorn"></i> Credits</a>
 </li>
 </ul>
 </section>
@@ -101,7 +100,7 @@ TODO
 <a class=padding>
 <i class="fas fa-language fa-fw"></i>
 <div class=select-style>
-<select id=select-language onchange="location=this.value"><option id=en value=/en/user-guide/>English</option><option id=zh value=/zh/user-guide/ selected>简体中文</option></select><svg id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="255" height="255" viewBox="0 0 255 255" style="enable-background:new 0 0 255 255"><g><g id="arrow-drop-down"><polygon points="0,63.75 127.5,191.25 255,63.75"/></g></g></svg>
+<select id=select-language onchange="location=this.value"><option id=en value=/en/developer-guide/todo/ selected>English</option><option id=zh value=/zh/developer-guide/todo/>简体中文</option></select><svg id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="255" height="255" viewBox="0 0 255 255" style="enable-background:new 0 0 255 255"><g><g id="arrow-drop-down"><polygon points="0,63.75 127.5,191.25 255,63.75"/></g></g></svg>
 </div>
 </a>
 </li>
@@ -124,7 +123,7 @@ from <a href=https://getgrav.org>Grav</a> and <a href=https://gohugo.io/>Hugo</a
 <div>
 <div id=top-bar>
 <div id=top-github-link>
-<a class=github-link title="Edit this page" href=https://github.com/klts-io/website/edit/master/content/user-guide/_index.zh.md target=blank>
+<a class=github-link title="Edit this page" href=https://github.com/klts-io/website/edit/master/content/developer-guide/todo.en.md target=blank>
 <i class="fas fa-code-branch"></i>
 <span id=top-github-link-text>Edit this page</span>
 </a>
@@ -135,26 +134,32 @@ from <a href=https://getgrav.org>Grav</a> and <a href=https://gohugo.io/>Hugo</a
 <i class="fas fa-bars"></i>
 </a>
 </span>
+<span id=toc-menu><i class="fas fa-list-alt"></i></span>
 <span class=links>
-<a href=/zh/>KLTS</a> > 终端用户指南
+<a href=/en/>KLTS</a> > <a href=/en/developer-guide/>Developer guide</a> > TODO
 </span>
+</div>
+<div class=progress>
+<div class=wrapper>
+<nav id=TableOfContents></nav>
+</div>
 </div>
 </div>
 </div>
 <div id=head-tags>
 </div>
-<div id=chapter>
 <div id=body-inner>
-<h2 id=了解-klts-的使用和安装>了解 KLTS 的使用和安装</h2>
-<p>KLTS 专注于提供生产可用稳定的 Kubernetes 版本, 所以当前只提供了基于 Kubeadm 安装方式, 并且提供了 yum 和 deb 的源</p>
+<h1>
+TODO
+</h1>
+<p>TODO</p>
 <footer class=footline>
 </footer>
 </div>
 </div>
-</div>
 <div id=navigation>
-<a class="nav nav-prev" href=/zh/ title=KLTS> <i class="fa fa-chevron-left"></i></a>
-<a class="nav nav-next" href=/zh/user-guide/pre-install/ title=安装预备 style=margin-right:0><i class="fa fa-chevron-right"></i></a>
+<a class="nav nav-prev" href=/en/developer-guide/ title="Developer guide"> <i class="fa fa-chevron-left"></i></a>
+<a class="nav nav-next" href=/en/user-guide/ title="User guide" style=margin-right:0><i class="fa fa-chevron-right"></i></a>
 </div>
 </section>
 <div style=left:-1000px;overflow:scroll;position:absolute;top:-1000px;border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px>
