--- a/zh/developer-guide/index.html
+++ b/zh/developer-guide/index.html
@@ -7,17 +7,17 @@
 <meta name=author content="Shiming Zhang">
 <link rel=icon href=/images/favicon.png type=image/png>
 <title>开发者指南 : ktls.io</title>
-<link href=/css/nucleus.css?1629275506 rel=stylesheet>
-<link href=/css/fontawesome-all.min.css?1629275506 rel=stylesheet>
-<link href=/css/hybrid.css?1629275506 rel=stylesheet>
-<link href=/css/featherlight.min.css?1629275506 rel=stylesheet>
-<link href=/css/perfect-scrollbar.min.css?1629275506 rel=stylesheet>
-<link href=/css/auto-complete.css?1629275506 rel=stylesheet>
-<link href=/css/atom-one-dark-reasonable.css?1629275506 rel=stylesheet>
-<link href=/css/theme.css?1629275506 rel=stylesheet>
-<link href=/css/tabs.css?1629275506 rel=stylesheet>
-<link href=/css/hugo-theme.css?1629275506 rel=stylesheet>
-<script src=/js/jquery-3.3.1.min.js?1629275506></script>
+<link href=/css/nucleus.css?1629275920 rel=stylesheet>
+<link href=/css/fontawesome-all.min.css?1629275920 rel=stylesheet>
+<link href=/css/hybrid.css?1629275920 rel=stylesheet>
+<link href=/css/featherlight.min.css?1629275920 rel=stylesheet>
+<link href=/css/perfect-scrollbar.min.css?1629275920 rel=stylesheet>
+<link href=/css/auto-complete.css?1629275920 rel=stylesheet>
+<link href=/css/atom-one-dark-reasonable.css?1629275920 rel=stylesheet>
+<link href=/css/theme.css?1629275920 rel=stylesheet>
+<link href=/css/tabs.css?1629275920 rel=stylesheet>
+<link href=/css/hugo-theme.css?1629275920 rel=stylesheet>
+<script src=/js/jquery-3.3.1.min.js?1629275920></script>
 <style>:root #header+#content>#left>#rlblock_left{display:none!important}</style>
 </head>
 <body data-url=/zh/developer-guide/>
@@ -33,10 +33,10 @@
 <input data-search-input id=search-by type=search placeholder=Search...>
 <span data-search-clear><i class="fas fa-times"></i></span>
 </div>
-<script type=text/javascript src=/js/lunr.min.js?1629275506></script>
-<script type=text/javascript src=/js/auto-complete.js?1629275506></script>
+<script type=text/javascript src=/js/lunr.min.js?1629275920></script>
+<script type=text/javascript src=/js/auto-complete.js?1629275920></script>
 <script type=text/javascript>var baseurl="//zh"</script>
-<script type=text/javascript src=/js/search.js?1629275506></script>
+<script type=text/javascript src=/js/search.js?1629275920></script>
 </div>
 <div class=highlightable>
 <ul class=topics>
@@ -101,7 +101,7 @@ TODO
 <a class=padding>
 <i class="fas fa-language fa-fw"></i>
 <div class=select-style>
-<select id=select-language onchange="location=this.value"><option id=zh value=/zh/developer-guide/ selected>简体中文</option></select><svg id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="255" height="255" viewBox="0 0 255 255" style="enable-background:new 0 0 255 255"><g><g id="arrow-drop-down"><polygon points="0,63.75 127.5,191.25 255,63.75"/></g></g></svg>
+<select id=select-language onchange="location=this.value"><option id=en value=/en/developer-guide/>English</option><option id=zh value=/zh/developer-guide/ selected>简体中文</option></select><svg id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="255" height="255" viewBox="0 0 255 255" style="enable-background:new 0 0 255 255"><g><g id="arrow-drop-down"><polygon points="0,63.75 127.5,191.25 255,63.75"/></g></g></svg>
 </div>
 </a>
 </li>
@@ -145,7 +145,7 @@ from <a href=https://getgrav.org>Grav</a> and <a href=https://gohugo.io/>Hugo</a
 </div>
 <div id=chapter>
 <div id=body-inner>
-<p>了解 KLTS 的构建和发布流程</p>
+<h2 id=了解-klts-的构建和发布流程>了解 KLTS 的构建和发布流程</h2>
 <footer class=footline>
 </footer>
 </div>
@@ -159,17 +159,17 @@ from <a href=https://getgrav.org>Grav</a> and <a href=https://gohugo.io/>Hugo</a
 <div style=left:-1000px;overflow:scroll;position:absolute;top:-1000px;border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px>
 <div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div>
 </div>
-<script src=/js/clipboard.min.js?1629275506></script>
-<script src=/js/perfect-scrollbar.min.js?1629275506></script>
-<script src=/js/perfect-scrollbar.jquery.min.js?1629275506></script>
-<script src=/js/jquery.sticky.js?1629275506></script>
-<script src=/js/featherlight.min.js?1629275506></script>
-<script src=/js/highlight.pack.js?1629275506></script>
+<script src=/js/clipboard.min.js?1629275920></script>
+<script src=/js/perfect-scrollbar.min.js?1629275920></script>
+<script src=/js/perfect-scrollbar.jquery.min.js?1629275920></script>
+<script src=/js/jquery.sticky.js?1629275920></script>
+<script src=/js/featherlight.min.js?1629275920></script>
+<script src=/js/highlight.pack.js?1629275920></script>
 <script>hljs.initHighlightingOnLoad()</script>
-<script src=/js/modernizr.custom-3.6.0.js?1629275506></script>
-<script src=/js/learn.js?1629275506></script>
-<script src=/js/hugo-learn.js?1629275506></script>
-<script src=/mermaid/mermaid.js?1629275506></script>
+<script src=/js/modernizr.custom-3.6.0.js?1629275920></script>
+<script src=/js/learn.js?1629275920></script>
+<script src=/js/hugo-learn.js?1629275920></script>
+<script src=/mermaid/mermaid.js?1629275920></script>
 <script>mermaid.initialize({startOnLoad:!0})</script>
 </body>
 </html>
