--- a/zh/user-guide/install/index.html
+++ b/zh/user-guide/install/index.html
@@ -7,17 +7,17 @@
 <meta name=author content="Shiming Zhang">
 <link rel=icon href=/images/favicon.png type=image/png>
 <title>安装 : ktls.io</title>
-<link href=/css/nucleus.css?1629275920 rel=stylesheet>
-<link href=/css/fontawesome-all.min.css?1629275920 rel=stylesheet>
-<link href=/css/hybrid.css?1629275920 rel=stylesheet>
-<link href=/css/featherlight.min.css?1629275920 rel=stylesheet>
-<link href=/css/perfect-scrollbar.min.css?1629275920 rel=stylesheet>
-<link href=/css/auto-complete.css?1629275920 rel=stylesheet>
-<link href=/css/atom-one-dark-reasonable.css?1629275920 rel=stylesheet>
-<link href=/css/theme.css?1629275920 rel=stylesheet>
-<link href=/css/tabs.css?1629275920 rel=stylesheet>
-<link href=/css/hugo-theme.css?1629275920 rel=stylesheet>
-<script src=/js/jquery-3.3.1.min.js?1629275920></script>
+<link href=/css/nucleus.css?1629338111 rel=stylesheet>
+<link href=/css/fontawesome-all.min.css?1629338111 rel=stylesheet>
+<link href=/css/hybrid.css?1629338111 rel=stylesheet>
+<link href=/css/featherlight.min.css?1629338111 rel=stylesheet>
+<link href=/css/perfect-scrollbar.min.css?1629338111 rel=stylesheet>
+<link href=/css/auto-complete.css?1629338111 rel=stylesheet>
+<link href=/css/atom-one-dark-reasonable.css?1629338111 rel=stylesheet>
+<link href=/css/theme.css?1629338111 rel=stylesheet>
+<link href=/css/tabs.css?1629338111 rel=stylesheet>
+<link href=/css/hugo-theme.css?1629338111 rel=stylesheet>
+<script src=/js/jquery-3.3.1.min.js?1629338111></script>
 <style>:root #header+#content>#left>#rlblock_left{display:none!important}</style>
 </head>
 <body data-url=/zh/user-guide/install/>
@@ -33,10 +33,10 @@
 <input data-search-input id=search-by type=search placeholder=Search...>
 <span data-search-clear><i class="fas fa-times"></i></span>
 </div>
-<script type=text/javascript src=/js/lunr.min.js?1629275920></script>
-<script type=text/javascript src=/js/auto-complete.js?1629275920></script>
+<script type=text/javascript src=/js/lunr.min.js?1629338111></script>
+<script type=text/javascript src=/js/auto-complete.js?1629338111></script>
 <script type=text/javascript>var baseurl="//zh"</script>
-<script type=text/javascript src=/js/search.js?1629275920></script>
+<script type=text/javascript src=/js/search.js?1629338111></script>
 </div>
 <div class=highlightable>
 <ul class=topics>
@@ -175,7 +175,7 @@ from <a href=https://getgrav.org>Grav</a> and <a href=https://gohugo.io/>Hugo</a
 <div class=tab-content>
 <div data-tab-item=YUM data-tab-group=pkg class="tab-item active">
 <div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>
-cat <span style=color:#e6db74>&lt;&lt; EOF &gt; /etc/yum.repos.d/klts.repo
+cat <span style=color:#e6db74>&lt;&lt; \EOF &gt; /etc/yum.repos.d/klts.repo
 </span><span style=color:#e6db74>[klts]
 </span><span style=color:#e6db74>name=klts
 </span><span style=color:#e6db74>baseurl=https://raw.githubusercontent.com/klts-io/kubepatch/repos/rpm/$basearch/
@@ -277,17 +277,17 @@ kubeadm init --image-repository <span style=color:#e6db74>${</span>REPOS<span st
 <div style=left:-1000px;overflow:scroll;position:absolute;top:-1000px;border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px>
 <div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div>
 </div>
-<script src=/js/clipboard.min.js?1629275920></script>
-<script src=/js/perfect-scrollbar.min.js?1629275920></script>
-<script src=/js/perfect-scrollbar.jquery.min.js?1629275920></script>
-<script src=/js/jquery.sticky.js?1629275920></script>
-<script src=/js/featherlight.min.js?1629275920></script>
-<script src=/js/highlight.pack.js?1629275920></script>
+<script src=/js/clipboard.min.js?1629338111></script>
+<script src=/js/perfect-scrollbar.min.js?1629338111></script>
+<script src=/js/perfect-scrollbar.jquery.min.js?1629338111></script>
+<script src=/js/jquery.sticky.js?1629338111></script>
+<script src=/js/featherlight.min.js?1629338111></script>
+<script src=/js/highlight.pack.js?1629338111></script>
 <script>hljs.initHighlightingOnLoad()</script>
-<script src=/js/modernizr.custom-3.6.0.js?1629275920></script>
-<script src=/js/learn.js?1629275920></script>
-<script src=/js/hugo-learn.js?1629275920></script>
-<script src=/mermaid/mermaid.js?1629275920></script>
+<script src=/js/modernizr.custom-3.6.0.js?1629338111></script>
+<script src=/js/learn.js?1629338111></script>
+<script src=/js/hugo-learn.js?1629338111></script>
+<script src=/mermaid/mermaid.js?1629338111></script>
 <script>mermaid.initialize({startOnLoad:!0})</script>
 </body>
 </html>
