--- a/content/zh/_index.html
+++ b/content/zh/_index.html
@@ -4,23 +4,22 @@ linkTitle = "KLTS.io"
 
 +++
 
-{{< blocks/cover title="Welcome to KLTS.io" image_anchor="top" height="full" color="orange" >}}
+{{< blocks/cover title="欢迎来到 KLTS.io" image_anchor="top" height="full" color="orange" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
-		Lean More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+		学习更多 <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/klts-io">
-		Source Code <i class="fab fa-github ml-2 "></i>
+		源码 <i class="fab fa-github ml-2 "></i>
 	</a>
-	<p class="lead mt-5">Long term support of Kubernetes is available here</p>
+	<p class="lead mt-5">稳定长期维护的 Kubernetes 在这里获得</p>
 	{{< blocks/link-down color="info" >}}
 </div>
 {{< /blocks/cover >}}
 
 
 {{% blocks/lead color="primary" %}}
-KLTS offers a production Kubernetes distribution, which is a fully open source Kubernetes distribution that provides a
-complete Kubernetes environment and dependencies
+KLTS 提供了一个用于生产的 Kubernetes 发行版，它是一个完全开源的 Kubernetes 发行版，它提供了一个完整的 Kubernetes 环境以及依赖
 {{% /blocks/lead %}}
 
 {{< blocks/section color="dark" >}}
