Update the index and about page

--- a/content/zh/_index.html
+++ b/content/zh/_index.html
@@ -7,49 +7,39 @@ linkTitle = "KLTS.io"
 {{< blocks/cover title="欢迎来到 KLTS.io" image_anchor="top" height="full" color="orange" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
-		学习更多 <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+		阅读文档 <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/klts-io">
-		源码 <i class="fab fa-github ml-2 "></i>
+		查看源码 <i class="fab fa-github ml-2 "></i>
 	</a>
-	<p class="lead mt-5">稳定长期维护的 Kubernetes 在这里获得</p>
+	<p class="lead mt-5">稳定长期维护的旧版本 Kubernetes，就在这里</p>
 	{{< blocks/link-down color="info" >}}
 </div>
 {{< /blocks/cover >}}
 
 
 {{% blocks/lead color="primary" %}}
-KLTS 提供了一个用于生产的 Kubernetes 发行版，它是一个完全开源的 Kubernetes 发行版，它提供了一个完整的 Kubernetes 环境以及依赖
+KLTS 提供的旧版本 Kubernetes 是持续维护的正式发行版，可直接用于生产，完全开源，包含了完整的 Kubernetes 运行时环境及其依赖
 {{% /blocks/lead %}}
 
 {{< blocks/section color="dark" >}}
-{{% blocks/feature icon="fa-lightbulb" title="New chair metrics!" %}}
-The Goldydocs UI now shows chair size metrics by default.
-
-Please follow this space for updates!
+{{% blocks/feature icon="fa-lightbulb" title="DaoCloud Enterprise 云原生应用云平台" url="https://www.daocloud.io/dce" %}}
+内核从 Kubernetes 1.10 到最新版本，其中 1.10 版本已维护了 3 年以上！
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fab fa-github" title="Contributions welcome!" url="https://github.com/klts-io" %}}
-We do a [Pull Request](https://github.com/klts-io/website/pulls) contributions workflow on **GitHub**. New users
-are always welcome!
+{{% blocks/feature icon="fab fa-github" title="欢迎任何贡献者！" url="https://github.com/klts-io" %}}
+我们在 **GitHub** 上开放了 [Pull Request](https://github.com/klts-io/website/pulls) 贡献工作流。欢迎开发者加入！
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fab fa-twitter" title="Follow us on Twitter!" url="https://twitter.com/docsydocs" %}}
-For announcement of latest features etc.
+{{% blocks/feature icon="fab fa-twitter" title="了解我们！" url="https://www.daocloud.io/" %}}
+企业级云计算领域的创新领导者
 {{% /blocks/feature %}}
 
 
 {{< /blocks/section >}}
 
-
-{{< blocks/section >}}
-<div class="col">
-	<h1 class="text-center">This is the second Section</h1>
-</div>
-
-{{< /blocks/section >}}
 
 
 
@@ -72,10 +62,3 @@ For announcement of latest features etc.
 
 {{< /blocks/section >}}
 
-{{< blocks/section >}}
-
-<div class="col-12">
-	<h1 class="text-center">This is another Section</h1>
-</div>
-
-{{< /blocks/section >}}
