deploy: 9a15b0097237dbca3f4af1bf5a9e47fcf0762e7c

--- a/zh/index.html
+++ b/zh/index.html
@@ -54,7 +54,7 @@
 </ul>
 </div>
 <div class="navbar-nav d-none d-lg-block">
-<input type=search class="form-control td-search-input" placeholder="&#xf002; 站内搜索…" aria-label=站内搜索… autocomplete=off data-offline-search-index-json-src=/offline-search-index.eaabfa30a624381887c24a6df958aa23.json data-offline-search-base-href=/ data-offline-search-max-results=10>
+<input type=search class="form-control td-search-input" placeholder="&#xf002; 站内搜索…" aria-label=站内搜索… autocomplete=off data-offline-search-index-json-src=/offline-search-index.b2e1aac4085b2bf31fad0e6e680a785d.json data-offline-search-base-href=/ data-offline-search-max-results=10>
 </div>
 </nav>
 </header>
@@ -72,12 +72,12 @@
 <div class="pt-3 lead">
 <div class=mx-auto>
 <a class="btn btn-lg btn-primary mr-3 mb-4" href=/zh/docs/>
-学习更多 <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+阅读文档 <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 </a>
 <a class="btn btn-lg btn-secondary mr-3 mb-4" href=https://github.com/klts-io>
-源码 <i class="fab fa-github ml-2"></i>
+查看源码 <i class="fab fa-github ml-2"></i>
 </a>
-<p class="lead mt-5">稳定长期维护的 Kubernetes 在这里获得</p>
+<p class="lead mt-5">稳定长期维护的旧版本 Kubernetes，就在这里</p>
 <a class="btn btn-link text-info" href=#td-block-1 aria-label=更多><i class="fa fa-chevron-circle-down" style=font-size:400%></i></a>
 </div>
 </div>
@@ -90,7 +90,7 @@
 <section class="row td-box td-box--primary position-relative td-box--gradient td-box--height-auto">
 <div class="container text-center td-arrow-down">
 <span class="h4 mb-0">
-<p>KLTS 提供了一个用于生产的 Kubernetes 发行版，它是一个完全开源的 Kubernetes 发行版，它提供了一个完整的 Kubernetes 环境以及依赖</p>
+<p>KLTS 提供的旧版本 Kubernetes 是持续维护的正式发行版，可直接用于生产，完全开源，包含了完整的 Kubernetes 运行时环境及其依赖</p>
 </span>
 </div>
 </section>
@@ -103,23 +103,22 @@
 <i class="fas fa-lightbulb"></i>
 </div>
 <h4 class=h3>
-New chair metrics!
+DaoCloud Enterprise 云原生应用云平台
 </h4>
 <p class=mb-0>
-<p>The Goldydocs UI now shows chair size metrics by default.</p>
-<p>Please follow this space for updates!</p>
+<p>内核从 Kubernetes 1.10 到最新版本，其中 1.10 版本已维护了 3 年以上！</p>
 </p>
+<p><a href=https://www.daocloud.io/dce>更多 …</a></p>
 </div>
 <div class="col-lg-4 mb-5 mb-lg-0 text-center">
 <div class="mb-4 h1">
 <i class="fab fa-github"></i>
 </div>
 <h4 class=h3>
-Contributions welcome!
+欢迎任何贡献者！
 </h4>
 <p class=mb-0>
-<p>We do a <a href=https://github.com/klts-io/website/pulls>Pull Request</a> contributions workflow on <strong>GitHub</strong>. New users
-are always welcome!</p>
+<p>我们在 <strong>GitHub</strong> 上开放了 <a href=https://github.com/klts-io/website/pulls>Pull Request</a> 贡献工作流。欢迎开发者加入！</p>
 </p>
 <p><a href=https://github.com/klts-io>更多 …</a></p>
 </div>
@@ -128,28 +127,18 @@ are always welcome!</p>
 <i class="fab fa-twitter"></i>
 </div>
 <h4 class=h3>
-Follow us on Twitter!
+了解我们！
 </h4>
 <p class=mb-0>
-<p>For announcement of latest features etc.</p>
+<p>企业级云计算领域的创新领导者</p>
 </p>
-<p><a href=https://twitter.com/docsydocs>更多 …</a></p>
+<p><a href=https://www.daocloud.io/>更多 …</a></p>
 </div>
 </div>
 </div>
 </section>
 <a id=td-block-3 class=td-offset-anchor></a>
 <section class="row td-box td-box--3 td-box--gradient td-box--height-auto">
-<div class=col>
-<div class=row>
-<div class=col>
-<h1 class=text-center>This is the second Section</h1>
-</div>
-</div>
-</div>
-</section>
-<a id=td-block-4 class=td-offset-anchor></a>
-<section class="row td-box td-box--4 td-box--gradient td-box--height-auto">
 <div class=col>
 <div class=row>
 <div class="col-lg-4 mb-5 mb-lg-0 text-center">
@@ -187,16 +176,6 @@ Follow us on Twitter!
 <p>For announcement of latest features etc.</p>
 </p>
 <p><a href=https://twitter.com/GoHugoIO>更多 …</a></p>
-</div>
-</div>
-</div>
-</section>
-<a id=td-block-5 class=td-offset-anchor></a>
-<section class="row td-box td-box--5 td-box--gradient td-box--height-auto">
-<div class=col>
-<div class=row>
-<div class=col-12>
-<h1 class=text-center>This is another Section</h1>
 </div>
 </div>
 </div>
