added intro page, updated index and pre-install pages

--- a/content/zh/_index.html
+++ b/content/zh/_index.html
@@ -12,28 +12,28 @@ linkTitle = "KLTS.io"
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/klts-io">
 		查看源码 <i class="fab fa-github ml-2 "></i>
 	</a>
-	<p class="lead mt-5">稳定长期维护的旧版本 Kubernetes，就在这里</p>
+	<p class="lead mt-5">稳定、长期维护的 Kubernetes 早期版本都在这里</p>
 	{{< blocks/link-down color="info" >}}
 </div>
 {{< /blocks/cover >}}
 
 
 {{% blocks/lead color="primary" %}}
-KLTS 提供的旧版本 Kubernetes 是持续维护的正式发行版，可直接用于生产，完全开源，包含了完整的 Kubernetes 运行时环境及其依赖
+KLTS 持续维护 Kubernetes 早期发行的版本，定期修复常见的 CVE 漏洞和 bug，可直接用于生产，完全开源，包含了完整的 Kubernetes 运行时环境及其依赖
 {{% /blocks/lead %}}
 
 {{< blocks/section color="dark" >}}
-{{% blocks/feature icon="fa-lightbulb" title="DaoCloud Enterprise 云原生应用云平台" url="https://www.daocloud.io/dce" %}}
-内核从 Kubernetes 1.10 到最新版本，其中 1.10 版本已维护了 3 年以上！
+{{% blocks/feature icon="fa-lightbulb" title="DaoCloud 开源社区" url="https://github.com/daocloud" %}}
+提供镜像验证、交互设计、运维套件和文档开发等实用的开源工具！
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fab fa-github" title="欢迎任何贡献者！" url="https://github.com/klts-io" %}}
+{{% blocks/feature icon="fab fa-github" title="欢迎加入 KLTS" url="https://github.com/klts-io" %}}
 我们在 **GitHub** 上开放了 [Pull Request](https://github.com/klts-io/website/pulls) 贡献工作流。欢迎开发者加入！
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fab fa-twitter" title="了解我们！" url="https://www.daocloud.io/" %}}
+{{% blocks/feature icon="fab fa-twitter" title="了解 DaoCloud" url="https://www.daocloud.io/" %}}
 企业级云计算领域的创新领导者
 {{% /blocks/feature %}}
 
@@ -44,19 +44,18 @@ KLTS 提供的旧版本 Kubernetes 是持续维护的正式发行版，可直接
 
 
 {{< blocks/section >}}
-{{% blocks/feature icon="fab fa-app-store-ios" title="Download **from AppStore**" %}}
-Get the Goldydocs app!
+{{% blocks/feature icon="fab fa-app-store-ios" title="安装准备工作" url="https://klts.io/zh/docs/pre-install/" %}}
+安装 Kubernetes 的环境准备工作
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fab fa-github" title="Contributions welcome!" url="https://github.com/google/docsy-example" %}}
-We do a [Pull Request](https://github.com/google/docsy-example/pulls) contributions workflow on **GitHub**. New users
-are always welcome!
+{{% blocks/feature icon="fab fa-github" title="安装" url="https://klts.io/zh/docs/install/" %}}
+Kubernetes 的安装步骤
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fab fa-twitter" title="Follow us on Twitter!" url="https://twitter.com/GoHugoIO" %}}
-For announcement of latest features etc.
+{{% blocks/feature icon="fab fa-twitter" title="安装之后" url="https://klts.io/zh/docs/post-install/" %}}
+安装 Kubernetes 之后需要执行的操作
 {{% /blocks/feature %}}
 
 
