--- a/content/zh/about/_index.html
+++ b/content/zh/about/_index.html
@@ -14,8 +14,8 @@ menu:
 {{< /blocks/cover >}}
 
 {{% blocks/lead %}}
-Kubernetes 是一个企业级容器集群管理系统，但目前官方仅维护最新的几个版本。
-如果您使用的是 1.18 之前的版本，该怎么办呢？不用担心，KLTS 帮助您维护官方不再维护的版本。
+Kubernetes 是一个企业级容器集群管理系统，但目前社区仅维护最新的几个版本。
+如果您使用的是较早的版本，该怎么办呢？不用担心，KLTS 帮助您维护社区不再维护的版本。
 我们目前持续维护 1.10 到 1.18 近 10 个版本，您只需下载对应的版本，就能获得稳定运行的 Kubernetes 并享受持续维护的免费服务。 
 
 {{% /blocks/lead %}}
@@ -35,7 +35,7 @@ Kubernetes 是一个企业级容器集群管理系统，但目前官方仅维护
 {{< blocks/section >}}
 
 <div class="col-12">
-  <h3 class="text-center">Kubernetes 官方结束维护某个版本后，KLTS 将继续提供两年以上的维护，主要包括修补 CVE 漏洞和较为严重的 bug。
+  <h3 class="text-center">Kubernetes 社区停止维护某个版本后，KLTS 将继续提供两年以上的维护，主要包括修补 CVE 漏洞和较为严重的 bug。
   </h3>
 </div>
 
