--- a/zh/index.html
+++ b/zh/index.html
@@ -54,7 +54,7 @@
 </ul>
 </div>
 <div class="navbar-nav d-none d-lg-block">
-<input type=search class="form-control td-search-input" placeholder="&#xf002; 站内搜索…" aria-label=站内搜索… autocomplete=off data-offline-search-index-json-src=/offline-search-index.9c8f538212f857e904b28133c9dc64a9.json data-offline-search-base-href=/ data-offline-search-max-results=10>
+<input type=search class="form-control td-search-input" placeholder="&#xf002; 站内搜索…" aria-label=站内搜索… autocomplete=off data-offline-search-index-json-src=/offline-search-index.952dc222b4e543c1a173a205ac6327ea.json data-offline-search-base-href=/ data-offline-search-max-results=10>
 </div>
 </nav>
 </header>
@@ -77,7 +77,7 @@
 <a class="btn btn-lg btn-secondary mr-3 mb-4" href=https://github.com/klts-io>
 查看源码 <i class="fab fa-github ml-2"></i>
 </a>
-<p class="lead mt-5">稳定长期维护的旧版本 Kubernetes，就在这里</p>
+<p class="lead mt-5">稳定、长期维护的 Kubernetes 早期版本都在这里</p>
 <a class="btn btn-link text-info" href=#td-block-1 aria-label=更多><i class="fa fa-chevron-circle-down" style=font-size:400%></i></a>
 </div>
 </div>
@@ -90,7 +90,7 @@
 <section class="row td-box td-box--primary position-relative td-box--gradient td-box--height-auto">
 <div class="container text-center td-arrow-down">
 <span class="h4 mb-0">
-<p>KLTS 提供的旧版本 Kubernetes 是持续维护的正式发行版，可直接用于生产，完全开源，包含了完整的 Kubernetes 运行时环境及其依赖</p>
+<p>KLTS 持续维护 Kubernetes 早期发行的版本，定期修复常见的 CVE 漏洞和 bug，可直接用于生产，完全开源，包含了完整的 Kubernetes 运行时环境及其依赖</p>
 </span>
 </div>
 </section>
@@ -103,19 +103,19 @@
 <i class="fas fa-lightbulb"></i>
 </div>
 <h4 class=h3>
-DaoCloud Enterprise 云原生应用云平台
+DaoCloud 开源社区
 </h4>
 <p class=mb-0>
-<p>内核从 Kubernetes 1.10 到最新版本，其中 1.10 版本已维护了 3 年以上！</p>
+<p>提供镜像验证、交互设计、运维套件和文档开发等实用的开源工具！</p>
 </p>
-<p><a href=https://www.daocloud.io/dce>更多 …</a></p>
+<p><a href=https://github.com/daocloud>更多 …</a></p>
 </div>
 <div class="col-lg-4 mb-5 mb-lg-0 text-center">
 <div class="mb-4 h1">
 <i class="fab fa-github"></i>
 </div>
 <h4 class=h3>
-欢迎任何贡献者！
+欢迎加入 KLTS
 </h4>
 <p class=mb-0>
 <p>我们在 <strong>GitHub</strong> 上开放了 <a href=https://github.com/klts-io/website/pulls>Pull Request</a> 贡献工作流。欢迎开发者加入！</p>
@@ -127,7 +127,7 @@ DaoCloud Enterprise 云原生应用云平台
 <i class="fab fa-twitter"></i>
 </div>
 <h4 class=h3>
-了解我们！
+了解 DaoCloud
 </h4>
 <p class=mb-0>
 <p>企业级云计算领域的创新领导者</p>
@@ -146,36 +146,36 @@ DaoCloud Enterprise 云原生应用云平台
 <i class="fab fa-app-store-ios"></i>
 </div>
 <h4 class=h3>
-Download **from AppStore**
+安装准备工作
 </h4>
 <p class=mb-0>
-<p>Get the Goldydocs app!</p>
+<p>安装 Kubernetes 的环境准备工作</p>
 </p>
+<p><a href=https://klts.io/zh/docs/pre-install/>更多 …</a></p>
 </div>
 <div class="col-lg-4 mb-5 mb-lg-0 text-center">
 <div class="mb-4 h1">
 <i class="fab fa-github"></i>
 </div>
 <h4 class=h3>
-Contributions welcome!
+安装
 </h4>
 <p class=mb-0>
-<p>We do a <a href=https://github.com/google/docsy-example/pulls>Pull Request</a> contributions workflow on <strong>GitHub</strong>. New users
-are always welcome!</p>
+<p>Kubernetes 的安装步骤</p>
 </p>
-<p><a href=https://github.com/google/docsy-example>更多 …</a></p>
+<p><a href=https://klts.io/zh/docs/install/>更多 …</a></p>
 </div>
 <div class="col-lg-4 mb-5 mb-lg-0 text-center">
 <div class="mb-4 h1">
 <i class="fab fa-twitter"></i>
 </div>
 <h4 class=h3>
-Follow us on Twitter!
+安装之后
 </h4>
 <p class=mb-0>
-<p>For announcement of latest features etc.</p>
+<p>安装 Kubernetes 之后需要执行的操作</p>
 </p>
-<p><a href=https://twitter.com/GoHugoIO>更多 …</a></p>
+<p><a href=https://klts.io/zh/docs/post-install/>更多 …</a></p>
 </div>
 </div>
 </div>
