--- a/zh/about/index.html
+++ b/zh/about/index.html
@@ -54,7 +54,7 @@
 </ul>
 </div>
 <div class="navbar-nav d-none d-lg-block">
-<input type=search class="form-control td-search-input" placeholder="&#xf002; 站内搜索…" aria-label=站内搜索… autocomplete=off data-offline-search-index-json-src=/offline-search-index.9c8f538212f857e904b28133c9dc64a9.json data-offline-search-base-href=/ data-offline-search-max-results=10>
+<input type=search class="form-control td-search-input" placeholder="&#xf002; 站内搜索…" aria-label=站内搜索… autocomplete=off data-offline-search-index-json-src=/offline-search-index.952dc222b4e543c1a173a205ac6327ea.json data-offline-search-base-href=/ data-offline-search-max-results=10>
 </div>
 </nav>
 </header>
@@ -82,8 +82,8 @@
 <section class="row td-box td-box--1 position-relative td-box--gradient td-box--height-auto">
 <div class="container text-center td-arrow-down">
 <span class="h4 mb-0">
-<p>Kubernetes 是一个企业级容器集群管理系统，但目前官方仅维护最新的几个版本。
-如果您使用的是 1.18 之前的版本，该怎么办呢？不用担心，KLTS 帮助您维护官方不再维护的版本。
+<p>Kubernetes 是一个企业级容器集群管理系统，但目前社区仅维护最新的几个版本。
+如果您使用的是较早的版本，该怎么办呢？不用担心，KLTS 帮助您维护社区不再维护的版本。
 我们目前持续维护 1.10 到 1.18 近 10 个版本，您只需下载对应的版本，就能获得稳定运行的 Kubernetes 并享受持续维护的免费服务。</p>
 </span>
 </div>
@@ -104,7 +104,7 @@
 <div class=col>
 <div class=row>
 <div class=col-12>
-<h3 class=text-center>Kubernetes 官方结束维护某个版本后，KLTS 将继续提供两年以上的维护，主要包括修补 CVE 漏洞和较为严重的 bug。
+<h3 class=text-center>Kubernetes 社区停止维护某个版本后，KLTS 将继续提供两年以上的维护，主要包括修补 CVE 漏洞和较为严重的 bug。
 </h3>
 </div>
 </div>
