--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -32,7 +32,7 @@ Please follow this space for updates!
 
 
 {{% blocks/feature icon="fab fa-github" title="Contributions welcome!" url="https://github.com/klts-io" %}}
-We do a [Pull Request](https://github.com/klts-io/website/pulls) contributions workflow on **GitHub**. New users
+We do a {{< link text="Pull Request" url="https://github.com/klts-io/website/pulls" >}} contributions workflow on **GitHub**. New users
 are always welcome!
 {{% /blocks/feature %}}
 
@@ -61,7 +61,7 @@ Get the Goldydocs app!
 
 
 {{% blocks/feature icon="fab fa-github" title="Contributions welcome!" url="https://github.com/google/docsy-example" %}}
-We do a [Pull Request](https://github.com/google/docsy-example/pulls) contributions workflow on **GitHub**. New users
+We do a {{< link text="Pull Request" url="https://github.com/google/docsy-example/pulls" >}} contributions workflow on **GitHub**. New users
 are always welcome!
 {{% /blocks/feature %}}
 
