deploy: e1e1fef52cac14e40469e0bbf638e5a3595b0b7c

--- a/zh/index.html
+++ b/zh/index.html
@@ -54,7 +54,7 @@
 </ul>
 </div>
 <div class="navbar-nav d-none d-lg-block">
-<input type=search class="form-control td-search-input" placeholder="&#xf002; 站内搜索…" aria-label=站内搜索… autocomplete=off data-offline-search-index-json-src=/offline-search-index.643624db0a73f82240781d594cc66e07.json data-offline-search-base-href=/ data-offline-search-max-results=10>
+<input type=search class="form-control td-search-input" placeholder="&#xf002; 站内搜索…" aria-label=站内搜索… autocomplete=off data-offline-search-index-json-src=/offline-search-index.578c8bf05f3fc7dbdbbffd93d6272ea7.json data-offline-search-base-href=/ data-offline-search-max-results=10>
 </div>
 </nav>
 </header>
@@ -118,7 +118,7 @@ DaoCloud 开源社区
 欢迎加入 KLTS
 </h4>
 <p class=mb-0>
-<p>我们在 <strong>GitHub</strong> 上开放了 <a href=https://github.com/klts-io/website/pulls>Pull Request</a> 贡献工作流。欢迎开发者加入！</p>
+<p>我们在 <strong>GitHub</strong> 上开放了 <a href=https://github.com/klts-io/website/pulls target=_blank>Pull Request</a> 贡献工作流。欢迎开发者加入！</p>
 </p>
 <p><a href=https://github.com/klts-io>更多 …</a></p>
 </div>
@@ -151,7 +151,7 @@ DaoCloud 开源社区
 <p class=mb-0>
 <p>安装 Kubernetes 的环境准备工作</p>
 </p>
-<p><a href=https://klts.io/zh/docs/pre-install/>更多 …</a></p>
+<p><a href=/zh/docs/pre-install/>更多 …</a></p>
 </div>
 <div class="col-lg-4 mb-5 mb-lg-0 text-center">
 <div class="mb-4 h1">
@@ -163,7 +163,7 @@ DaoCloud 开源社区
 <p class=mb-0>
 <p>Kubernetes 的安装步骤</p>
 </p>
-<p><a href=https://klts.io/zh/docs/install/>更多 …</a></p>
+<p><a href=/zh/docs/install/>更多 …</a></p>
 </div>
 <div class="col-lg-4 mb-5 mb-lg-0 text-center">
 <div class="mb-4 h1">
@@ -175,7 +175,7 @@ DaoCloud 开源社区
 <p class=mb-0>
 <p>安装 Kubernetes 之后需要执行的操作</p>
 </p>
-<p><a href=https://klts.io/zh/docs/post-install/>更多 …</a></p>
+<p><a href=/zh/docs/post-install/>更多 …</a></p>
 </div>
 </div>
 </div>
