--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ English
 </ul>
 </div>
 <div class="navbar-nav d-none d-lg-block">
-<input type=search class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete=off data-offline-search-index-json-src=/offline-search-index.643624db0a73f82240781d594cc66e07.json data-offline-search-base-href=/ data-offline-search-max-results=10>
+<input type=search class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete=off data-offline-search-index-json-src=/offline-search-index.578c8bf05f3fc7dbdbbffd93d6272ea7.json data-offline-search-base-href=/ data-offline-search-max-results=10>
 </div>
 </nav>
 </header>
@@ -119,7 +119,7 @@ New chair metrics!
 Contributions welcome!
 </h4>
 <p class=mb-0>
-<p>We do a <a href=https://github.com/klts-io/website/pulls>Pull Request</a> contributions workflow on <strong>GitHub</strong>. New users
+<p>We do a <a href=https://github.com/klts-io/website/pulls target=_blank>Pull Request</a> contributions workflow on <strong>GitHub</strong>. New users
 are always welcome!</p>
 </p>
 <p><a href=https://github.com/klts-io>Read more …</a></p>
@@ -172,7 +172,7 @@ Download **from AppStore**
 Contributions welcome!
 </h4>
 <p class=mb-0>
-<p>We do a <a href=https://github.com/google/docsy-example/pulls>Pull Request</a> contributions workflow on <strong>GitHub</strong>. New users
+<p>We do a <a href=https://github.com/google/docsy-example/pulls target=_blank>Pull Request</a> contributions workflow on <strong>GitHub</strong>. New users
 are always welcome!</p>
 </p>
 <p><a href=https://github.com/google/docsy-example>Read more …</a></p>
