deploy: e91c10a514342507eabeca1228099a475d5cc92d

--- a/zh/index.html
+++ b/zh/index.html
@@ -118,7 +118,7 @@ DaoCloud 开源社区
 欢迎加入 KLTS
 </h4>
 <p class=mb-0>
-<p>我们在 <strong>GitHub</strong> 上开放了 <a href=https://github.com/klts-io/website/pulls target=_blank>Pull Request</a> 贡献工作流。欢迎开发者加入！</p>
+<p>我们在 <strong>GitHub</strong> 上开放了 <a href=https://github.com/klts-io/website/pulls target>Pull Request</a> 贡献工作流。欢迎开发者加入！</p>
 </p>
 <p><a href=https://github.com/klts-io>更多 …</a></p>
 </div>
