--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ New chair metrics!
 Contributions welcome!
 </h4>
 <p class=mb-0>
-<p>We do a <a href=https://github.com/klts-io/website/pulls target>Pull Request</a> contributions workflow on <strong>GitHub</strong>. New users
+<p>We do a <a href=https://github.com/klts-io/website/pulls target=_blank>Pull Request</a> contributions workflow on <strong>GitHub</strong>. New users
 are always welcome!</p>
 </p>
 <p><a href=https://github.com/klts-io>Read more …</a></p>
@@ -172,7 +172,7 @@ Download **from AppStore**
 Contributions welcome!
 </h4>
 <p class=mb-0>
-<p>We do a <a href=https://github.com/google/docsy-example/pulls target>Pull Request</a> contributions workflow on <strong>GitHub</strong>. New users
+<p>We do a <a href=https://github.com/google/docsy-example/pulls target=_blank>Pull Request</a> contributions workflow on <strong>GitHub</strong>. New users
 are always welcome!</p>
 </p>
 <p><a href=https://github.com/google/docsy-example>Read more …</a></p>
