--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -4,7 +4,7 @@ linkTitle = "KLTS.io"
 
 +++
 
-{{< blocks/cover title="Welcome to KLTS.io" image_anchor="top" height="full" color="orange" >}}
+{{< blocks/cover title="Welcome to KLTS.IO" image_anchor="top" height="full" color="orange" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Lean More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
