--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ English
 </ul>
 </div>
 <div class="navbar-nav d-none d-lg-block">
-<input type=search class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete=off data-offline-search-index-json-src=/offline-search-index.21fa5c8c86facb5bd787f448cf9726c7.json data-offline-search-base-href=/ data-offline-search-max-results=10>
+<input type=search class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete=off data-offline-search-index-json-src=/offline-search-index.7757b40e414d96596168b0ff2ac818da.json data-offline-search-base-href=/ data-offline-search-max-results=10>
 </div>
 </nav>
 </header>
@@ -68,7 +68,7 @@ English
 <div class=row>
 <div class=col-12>
 <div class=text-center>
-<h1 class="display-1 mt-0 mt-md-5 pb-4">Welcome to KLTS.io</h1>
+<h1 class="display-1 mt-0 mt-md-5 pb-4">Welcome to KLTS.IO</h1>
 <div class="pt-3 lead">
 <div class=mx-auto>
 <a class="btn btn-lg btn-primary mr-3 mb-4" href=/docs/>
