--- a/zh/index.html
+++ b/zh/index.html
@@ -54,7 +54,7 @@
 </ul>
 </div>
 <div class="navbar-nav d-none d-lg-block">
-<input type=search class="form-control td-search-input" placeholder="&#xf002; 站内搜索…" aria-label=站内搜索… autocomplete=off data-offline-search-index-json-src=/offline-search-index.7757b40e414d96596168b0ff2ac818da.json data-offline-search-base-href=/ data-offline-search-max-results=10>
+<input type=search class="form-control td-search-input" placeholder="&#xf002; 站内搜索…" aria-label=站内搜索… autocomplete=off data-offline-search-index-json-src=/offline-search-index.792519798c4cabbd60e1a4ddc089842e.json data-offline-search-base-href=/ data-offline-search-max-results=10>
 </div>
 </nav>
 </header>
@@ -146,10 +146,10 @@ DaoCloud 开源社区
 <i class="fab fa-app-store-ios"></i>
 </div>
 <h4 class=h3>
-安装准备工作
+准备工作
 </h4>
 <p class=mb-0>
-<p>安装 Kubernetes 的环境准备工作</p>
+<p>Kubernetes 的安装环境准备工作</p>
 </p>
 <p><a href=/zh/docs/pre-install/>更多 …</a></p>
 </div>
@@ -170,7 +170,7 @@ DaoCloud 开源社区
 <i class="fab fa-twitter"></i>
 </div>
 <h4 class=h3>
-安装之后
+后续工作
 </h4>
 <p class=mb-0>
 <p>安装 Kubernetes 之后需要执行的操作</p>
