changed the background image

--- a/content/zh/_index.html
+++ b/content/zh/_index.html
@@ -12,7 +12,7 @@ linkTitle = "KLTS.io"
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/klts-io">
 		查看源码 <i class="fab fa-github ml-2 "></i>
 	</a>
-	<p class="lead mt-5">稳定、长期维护的 Kubernetes 早期版本都在这里</p>
+	<p class="lead mt-5"><strong>稳定、长期维护的 Kubernetes 早期版本都在这里</strong></p>
 	{{< blocks/link-down color="info" >}}
 </div>
 {{< /blocks/cover >}}
