--- a/zh/index.html
+++ b/zh/index.html
@@ -54,15 +54,15 @@
 </ul>
 </div>
 <div class="navbar-nav d-none d-lg-block">
-<input type=search class="form-control td-search-input" placeholder="&#xf002; 站内搜索…" aria-label=站内搜索… autocomplete=off data-offline-search-index-json-src=/offline-search-index.792519798c4cabbd60e1a4ddc089842e.json data-offline-search-base-href=/ data-offline-search-max-results=10>
+<input type=search class="form-control td-search-input" placeholder="&#xf002; 站内搜索…" aria-label=站内搜索… autocomplete=off data-offline-search-index-json-src=/offline-search-index.0337f81b5723b2ea08a0181cc4c64d67.json data-offline-search-base-href=/ data-offline-search-max-results=10>
 </div>
 </nav>
 </header>
 <div class="container-fluid td-default td-outer">
 <main role=main class=td-main>
-<link rel=preload as=image href=/zh/featured-background_hu376e1fbab6ce6c455a2b3aa5c258c0d9_496231_960x540_fill_q75_catmullrom_top.jpg media="(max-width: 1200px)">
-<link rel=preload as=image href=/zh/featured-background_hu376e1fbab6ce6c455a2b3aa5c258c0d9_496231_1920x1080_fill_q75_catmullrom_top.jpg media="(min-width: 1200px)">
-<style>#td-cover-block-0{background-image:url(/zh/featured-background_hu376e1fbab6ce6c455a2b3aa5c258c0d9_496231_960x540_fill_q75_catmullrom_top.jpg)}@media only screen and (min-width:1200px){#td-cover-block-0{background-image:url(/zh/featured-background_hu376e1fbab6ce6c455a2b3aa5c258c0d9_496231_1920x1080_fill_q75_catmullrom_top.jpg)}}</style>
+<link rel=preload as=image href=/zh/featured-background_hucee3cb3223e1b5244391c4cde6cfd3d7_469584_960x540_fill_q75_catmullrom_top.jpg media="(max-width: 1200px)">
+<link rel=preload as=image href=/zh/featured-background_hucee3cb3223e1b5244391c4cde6cfd3d7_469584_1920x1080_fill_q75_catmullrom_top.jpg media="(min-width: 1200px)">
+<style>#td-cover-block-0{background-image:url(/zh/featured-background_hucee3cb3223e1b5244391c4cde6cfd3d7_469584_960x540_fill_q75_catmullrom_top.jpg)}@media only screen and (min-width:1200px){#td-cover-block-0{background-image:url(/zh/featured-background_hucee3cb3223e1b5244391c4cde6cfd3d7_469584_1920x1080_fill_q75_catmullrom_top.jpg)}}</style>
 <section id=td-cover-block-0 class="row td-cover-block td-cover-block--height-full js-td-cover td-overlay td-overlay--dark -bg-orange">
 <div class="container td-overlay__inner">
 <div class=row>
@@ -77,7 +77,7 @@
 <a class="btn btn-lg btn-secondary mr-3 mb-4" href=https://github.com/klts-io>
 查看源码 <i class="fab fa-github ml-2"></i>
 </a>
-<p class="lead mt-5">稳定、长期维护的 Kubernetes 早期版本都在这里</p>
+<p class="lead mt-5"><strong>稳定、长期维护的 Kubernetes 早期版本都在这里</strong></p>
 <a class="btn btn-link text-info" href=#td-block-1 aria-label=更多><i class="fa fa-chevron-circle-down" style=font-size:400%></i></a>
 </div>
 </div>
