--- a/content/zh/about/_index.html
+++ b/content/zh/about/_index.html
@@ -8,7 +8,7 @@ menu:
 
 {{< blocks/cover title="关于 KLTS" image_anchor="bottom" height="min" >}}
 
-<p class="lead mt-5">KLTS (Kubernetes Long Term Support)
+<p class="lead mt-5"><strong>KLTS (Kubernetes Long Term Support)</strong> 
 </p>
 
 {{< /blocks/cover >}}
