--- a/content/en/about/_index.html
+++ b/content/en/about/_index.html
@@ -9,7 +9,7 @@ menu:
 
 {{< blocks/cover title="About KLTS" image_anchor="bottom" height="min" >}}
 
-<p class="lead mt-5">KLTS (Kubernetes Long Term Support)
+<p class="lead mt-5"><strong>KLTS (Kubernetes Long Term Support)</strong>
 </p>
 
 {{< /blocks/cover >}}
