--- a/about/_print/index.html
+++ b/about/_print/index.html
@@ -70,7 +70,7 @@ English
 <div class=text-center>
 <h1 class="display-1 mt-0 mt-md-5 pb-4">About KLTS</h1>
 <div class="pt-3 lead">
-<p class="lead mt-5">KLTS (Kubernetes Long Term Support)
+<p class="lead mt-5"><strong>KLTS (Kubernetes Long Term Support)</strong>
 </p>
 </div>
 </div>
