--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -19,64 +19,48 @@ linkTitle = "KLTS.io"
 
 
 {{% blocks/lead color="primary" %}}
-KLTS offers a production Kubernetes distribution, which is a fully open source Kubernetes distribution that provides a
+KLTS offers production distributions for earlier versions of Kubernetes, which are fully open source distributions that include
 complete Kubernetes environment and dependencies
 {{% /blocks/lead %}}
 
 {{< blocks/section color="dark" >}}
-{{% blocks/feature icon="fa-lightbulb" title="New chair metrics!" %}}
-The Goldydocs UI now shows chair size metrics by default.
+{{% blocks/feature icon="fa-lightbulb" title="DaoCloud Community" url="https://github.com/daocloud"%}}
+DaoCloud provides open source toolkits for image verification, interactive UI design library, and document management system.
+
 
 Please follow this space for updates!
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fab fa-github" title="Contributions welcome!" url="https://github.com/klts-io" %}}
+{{% blocks/feature icon="fab fa-github" title="Welcome to join KLTS!" url="https://github.com/klts-io" %}}
 We do a {{< link text="Pull Request" url="https://github.com/klts-io/website/pulls" >}} contributions workflow on **GitHub**. New users
 are always welcome!
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fab fa-twitter" title="Follow us on Twitter!" url="https://twitter.com/docsydocs" %}}
-For announcement of latest features etc.
+{{% blocks/feature icon="fab fa-twitter" title="Learn more about DaoCloud" url="https://www.daocloud.io/" %}}
+A innovative leader of enterprise-level PaaS provider in China
 {{% /blocks/feature %}}
 
 
 {{< /blocks/section >}}
 
 
-{{< blocks/section >}}
-<div class="col">
-	<h1 class="text-center">This is the second Section</h1>
-</div>
-
-{{< /blocks/section >}}
-
-
 
 {{< blocks/section >}}
-{{% blocks/feature icon="fab fa-app-store-ios" title="Download **from AppStore**" %}}
-Get the Goldydocs app!
+{{% blocks/feature icon="fab fa-app-store-ios" title="Preparation" url="/zh/docs/pre-install/" %}}
+Prepare your environment for installation.
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fab fa-github" title="Contributions welcome!" url="https://github.com/google/docsy-example" %}}
-We do a {{< link text="Pull Request" url="https://github.com/google/docsy-example/pulls" >}} contributions workflow on **GitHub**. New users
-are always welcome!
+{{% blocks/feature icon="fab fa-github" title="Installation" url="/zh/docs/install/" %}}
+Describes the procedure to install a Kubernetes version.
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fab fa-twitter" title="Follow us on Twitter!" url="https://twitter.com/GoHugoIO" %}}
-For announcement of latest features etc.
+{{% blocks/feature icon="fab fa-twitter" title="After your installation" url="/zh/docs/post-install/" %}}
+Describes those jobs you need perform after installation.
 {{% /blocks/feature %}}
 
-
-{{< /blocks/section >}}
-
-{{< blocks/section >}}
-
-<div class="col-12">
-	<h1 class="text-center">This is another Section</h1>
-</div>
 
 {{< /blocks/section >}}
