--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -48,17 +48,17 @@ A innovative leader of enterprise-level PaaS provider in China
 
 
 {{< blocks/section >}}
-{{% blocks/feature icon="fab fa-app-store-ios" title="Preparation" url="/zh/docs/pre-install/" %}}
+{{% blocks/feature icon="fab fa-app-store-ios" title="Preparation" url="/en/docs/pre-install/" %}}
 Prepare your environment for installation.
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fab fa-github" title="Installation" url="/zh/docs/install/" %}}
+{{% blocks/feature icon="fab fa-github" title="Installation" url="/en/docs/install/" %}}
 Describes the procedure to install a Kubernetes version.
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fab fa-twitter" title="After your installation" url="/zh/docs/post-install/" %}}
+{{% blocks/feature icon="fab fa-twitter" title="After your installation" url="/en/docs/post-install/" %}}
 Describes those jobs you need perform after installation.
 {{% /blocks/feature %}}
 
