--- a/content/en/about/_index.html
+++ b/content/en/about/_index.html
@@ -15,12 +15,10 @@ menu:
 {{< /blocks/cover >}}
 
 {{% blocks/lead %}}
-Kubernetes being an enterprise infrastructure, you should not use a version of Kubernetes that is no longer maintained.
-KLTS maintains the version that Kubernetes no longer maintains officially. You only need to upgrade to the KLTS patch
-version with minor fixes.
-To avoid bugs caused by upgrading your base to newer versions of Kubernetes, introducing features that are not currently
-available,
-Make Kubernetes more stable as your infrastructure.
+Kubernetes being an enterprise infrastructure, you should not use a version that is no longer maintained.
+KLTS maintains the versions that Kubernetes community drops officially. Simply upgrading to the KLTS patch
+version can enable you avoid bugs caused by newer official versions of Kubernetes, 
+no any worry about introducing features that are not currently available, and your infrastructure based on Kubernetes will be more stable.
 
 {{% /blocks/lead %}}
 
@@ -29,8 +27,8 @@ Make Kubernetes more stable as your infrastructure.
 <div class="col-12">
   <h1 class="text-center">The KLTS process is fully hosted on GitHub, and you can simply Fork the project and build your
     own version of Kubernetes.
-    The build artifacts will all be stored on GitHub, the images will be stored in the GitHub Package, and the RPM and
-    Deb packages will be stored in the repos branch of the same repository.</h1>
+    The build artifacts are all stored on GitHub, the images in the GitHub Package, and the RPM and
+    Deb packages in the repos branch of the same repository.</h1>
 </div>
 
 {{< /blocks/section >}}
@@ -40,8 +38,8 @@ Make Kubernetes more stable as your infrastructure.
 {{< blocks/section >}}
 
 <div class="col-12">
-  <h1 class="text-center">KLTS will maintain a release for at least 2 years after the official end of maintenance.
-    Mainly to patch CVE vulnerabilities and more serious bugs.</h1>
+  <h1 class="text-center">KLTS will maintain a release for at least two years after the official end of maintenance, 
+    to mainly patch CVE vulnerabilities and more serious bugs.</h1>
 </div>
 
 {{< /blocks/section >}}
