--- a/about/index.html
+++ b/about/index.html
@@ -54,7 +54,7 @@ English
 </ul>
 </div>
 <div class="navbar-nav d-none d-lg-block">
-<input type=search class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete=off data-offline-search-index-json-src=/offline-search-index.cacfbbbfa591f51b39845d8621d61d94.json data-offline-search-base-href=/ data-offline-search-max-results=10>
+<input type=search class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete=off data-offline-search-index-json-src=/offline-search-index.53d98202560a829a2e7d7649499cc356.json data-offline-search-base-href=/ data-offline-search-max-results=10>
 </div>
 </nav>
 </header>
@@ -82,12 +82,10 @@ English
 <section class="row td-box td-box--1 position-relative td-box--gradient td-box--height-auto">
 <div class="container text-center td-arrow-down">
 <span class="h4 mb-0">
-<p>Kubernetes being an enterprise infrastructure, you should not use a version of Kubernetes that is no longer maintained.
-KLTS maintains the version that Kubernetes no longer maintains officially. You only need to upgrade to the KLTS patch
-version with minor fixes.
-To avoid bugs caused by upgrading your base to newer versions of Kubernetes, introducing features that are not currently
-available,
-Make Kubernetes more stable as your infrastructure.</p>
+<p>Kubernetes being an enterprise infrastructure, you should not use a version that is no longer maintained.
+KLTS maintains the versions that Kubernetes community drops officially. Simply upgrading to the KLTS patch
+version can enable you avoid bugs caused by newer official versions of Kubernetes,
+no any worry about introducing features that are not currently available, and your infrastructure based on Kubernetes will be more stable.</p>
 </span>
 </div>
 </section>
@@ -98,8 +96,8 @@ Make Kubernetes more stable as your infrastructure.</p>
 <div class=col-12>
 <h1 class=text-center>The KLTS process is fully hosted on GitHub, and you can simply Fork the project and build your
 own version of Kubernetes.
-The build artifacts will all be stored on GitHub, the images will be stored in the GitHub Package, and the RPM and
-Deb packages will be stored in the repos branch of the same repository.</h1>
+The build artifacts are all stored on GitHub, the images in the GitHub Package, and the RPM and
+Deb packages in the repos branch of the same repository.</h1>
 </div>
 </div>
 </div>
@@ -109,8 +107,8 @@ Deb packages will be stored in the repos branch of the same repository.</h1>
 <div class=col>
 <div class=row>
 <div class=col-12>
-<h1 class=text-center>KLTS will maintain a release for at least 2 years after the official end of maintenance.
-Mainly to patch CVE vulnerabilities and more serious bugs.</h1>
+<h1 class=text-center>KLTS will maintain a release for at least two years after the official end of maintenance,
+to mainly patch CVE vulnerabilities and more serious bugs.</h1>
 </div>
 </div>
 </div>
