--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ English
 </ul>
 </div>
 <div class="navbar-nav d-none d-lg-block">
-<input type=search class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete=off data-offline-search-index-json-src=/offline-search-index.cacfbbbfa591f51b39845d8621d61d94.json data-offline-search-base-href=/ data-offline-search-max-results=10>
+<input type=search class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete=off data-offline-search-index-json-src=/offline-search-index.53d98202560a829a2e7d7649499cc356.json data-offline-search-base-href=/ data-offline-search-max-results=10>
 </div>
 </nav>
 </header>
@@ -90,7 +90,7 @@ Source Code <i class="fab fa-github ml-2"></i>
 <section class="row td-box td-box--primary position-relative td-box--gradient td-box--height-auto">
 <div class="container text-center td-arrow-down">
 <span class="h4 mb-0">
-<p>KLTS offers a production Kubernetes distribution, which is a fully open source Kubernetes distribution that provides a
+<p>KLTS offers production distributions for earlier versions of Kubernetes, which are fully open source distributions that include
 complete Kubernetes environment and dependencies</p>
 </span>
 </div>
@@ -104,19 +104,20 @@ complete Kubernetes environment and dependencies</p>
 <i class="fas fa-lightbulb"></i>
 </div>
 <h4 class=h3>
-New chair metrics!
+DaoCloud Community
 </h4>
 <p class=mb-0>
-<p>The Goldydocs UI now shows chair size metrics by default.</p>
+<p>DaoCloud provides open source toolkits for image verification, interactive UI design library, and document management system.</p>
 <p>Please follow this space for updates!</p>
 </p>
+<p><a href=https://github.com/daocloud>Read more …</a></p>
 </div>
 <div class="col-lg-4 mb-5 mb-lg-0 text-center">
 <div class="mb-4 h1">
 <i class="fab fa-github"></i>
 </div>
 <h4 class=h3>
-Contributions welcome!
+Welcome to join KLTS!
 </h4>
 <p class=mb-0>
 <p>We do a <a href=https://github.com/klts-io/website/pulls target=_blank>Pull Request</a> contributions workflow on <strong>GitHub</strong>. New users
@@ -129,12 +130,12 @@ are always welcome!</p>
 <i class="fab fa-twitter"></i>
 </div>
 <h4 class=h3>
-Follow us on Twitter!
+Learn more about DaoCloud
 </h4>
 <p class=mb-0>
-<p>For announcement of latest features etc.</p>
+<p>A innovative leader of enterprise-level PaaS provider in China</p>
 </p>
-<p><a href=https://twitter.com/docsydocs>Read more …</a></p>
+<p><a href=https://www.daocloud.io/>Read more …</a></p>
 </div>
 </div>
 </div>
@@ -143,61 +144,41 @@ Follow us on Twitter!
 <section class="row td-box td-box--3 td-box--gradient td-box--height-auto">
 <div class=col>
 <div class=row>
-<div class=col>
-<h1 class=text-center>This is the second Section</h1>
-</div>
-</div>
-</div>
-</section>
-<a id=td-block-4 class=td-offset-anchor></a>
-<section class="row td-box td-box--4 td-box--gradient td-box--height-auto">
-<div class=col>
-<div class=row>
 <div class="col-lg-4 mb-5 mb-lg-0 text-center">
 <div class="mb-4 h1">
 <i class="fab fa-app-store-ios"></i>
 </div>
 <h4 class=h3>
-Download **from AppStore**
+Preparation
 </h4>
 <p class=mb-0>
-<p>Get the Goldydocs app!</p>
+<p>Prepare your environment for installation.</p>
 </p>
+<p><a href=/en/docs/pre-install/>Read more …</a></p>
 </div>
 <div class="col-lg-4 mb-5 mb-lg-0 text-center">
 <div class="mb-4 h1">
 <i class="fab fa-github"></i>
 </div>
 <h4 class=h3>
-Contributions welcome!
+Installation
 </h4>
 <p class=mb-0>
-<p>We do a <a href=https://github.com/google/docsy-example/pulls target=_blank>Pull Request</a> contributions workflow on <strong>GitHub</strong>. New users
-are always welcome!</p>
+<p>Describes the procedure to install a Kubernetes version.</p>
 </p>
-<p><a href=https://github.com/google/docsy-example>Read more …</a></p>
+<p><a href=/en/docs/install/>Read more …</a></p>
 </div>
 <div class="col-lg-4 mb-5 mb-lg-0 text-center">
 <div class="mb-4 h1">
 <i class="fab fa-twitter"></i>
 </div>
 <h4 class=h3>
-Follow us on Twitter!
+After your installation
 </h4>
 <p class=mb-0>
-<p>For announcement of latest features etc.</p>
+<p>Describes those jobs you need perform after installation.</p>
 </p>
-<p><a href=https://twitter.com/GoHugoIO>Read more …</a></p>
-</div>
-</div>
-</div>
-</section>
-<a id=td-block-5 class=td-offset-anchor></a>
-<section class="row td-box td-box--5 td-box--gradient td-box--height-auto">
-<div class=col>
-<div class=row>
-<div class=col-12>
-<h1 class=text-center>This is another Section</h1>
+<p><a href=/en/docs/post-install/>Read more …</a></p>
 </div>
 </div>
 </div>
