minor text changes

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -12,7 +12,7 @@ linkTitle = "KLTS.io"
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/klts-io">
 		Source Code <i class="fab fa-github ml-2 "></i>
 	</a>
-	<p class="lead mt-5">Long term support of Kubernetes is available here</p>
+	<p class="lead mt-5"><strong>Long term support of Kubernetes is available here</strong> </p>
 	{{< blocks/link-down color="info" >}}
 </div>
 {{< /blocks/cover >}}
@@ -25,10 +25,8 @@ complete Kubernetes environment and dependencies
 
 {{< blocks/section color="dark" >}}
 {{% blocks/feature icon="fa-lightbulb" title="DaoCloud Community" url="https://github.com/daocloud"%}}
-DaoCloud provides open source toolkits for image verification, interactive UI design library, and document management system.
+We provide open source toolkits for image verification, interactive UI design, document management, and more.
 
-
-Please follow this space for updates!
 {{% /blocks/feature %}}
 
 
@@ -39,7 +37,7 @@ are always welcome!
 
 
 {{% blocks/feature icon="fab fa-twitter" title="Learn more about DaoCloud" url="https://www.daocloud.io/" %}}
-A innovative leader of enterprise-level PaaS provider in China
+A innovative leader of enterprise-level PaaS provider
 {{% /blocks/feature %}}
 
 
